--- a/react-burger/package.json
+++ b/react-burger/package.json
@@ -20,6 +20,7 @@
     "react-hook-inview": "^4.5.0",
     "react-intersection-observer": "^9.1.0",
     "react-redux": "^7.2.8",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
@@ -31,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
+  "homepage": "./"
 }
